--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "axios": "^0.21.4",
+    "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.17.3",
+    "json-server": "^0.17.0",
     "node-sass": "^6.0.1",
     "nuxt": "^2.15.7",
-    "sass-loader": "^10",
-    "vuex": "^3.6.2"
+    "sass-loader": "^10"
   }
 }
